--- a/src/App.css
+++ b/src/App.css
@@ -5,58 +5,22 @@
   z-index: 5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .canvas-container {
   width: 100vw;  
   height: 100vh; 
   display: block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.smoothed {
+  position: fixed;
+  bottom: 4%; 
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 @media (max-width: 768px) {
   .canvas-container {
-    height: 107vh;
     margin-top: 120px;
-    
-
-    .smoothed {
-      position: fixed;
-      bottom: 25px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
+    height: 900px;
   }
 }
